[tool.poetry]
name = "do-app"
version = "0.1.0"
description = ""
authors = ["Ammara Gul <umaraaziz456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
sqlmodel = "^0.0.18"
uvicorn = "^0.29.0"
pytest = "^8.2.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
